fix bug 39607, crash when multiple logins saved for same site, r=dveditz